--- a/refreshing/package.json
+++ b/refreshing/package.json
@@ -14,7 +14,10 @@
   },
   "dependencies": {
     "body-parser": "^1.19.1",
+    "ejs": "^3.1.6",
     "express": "^4.17.2",
-    "mysql2": "^2.3.3"
+    "express-handlebars": "^6.0.2",
+    "mysql2": "^2.3.3",
+    "pug": "^3.0.2"
   }
 }
