--- a/refreshing/package.json
+++ b/refreshing/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
+    "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "pug": "^3.0.2"
   }
